tests/valid/test_type_09.wyal
type Recursive is ((Recursive|null)[] r)

assert:
    forall(Recursive x, int[] y):
        if:
            x == y
        then:
            |y| == 0