tests/invalid/test_030.wyal
type Recursive is ((Recursive|int)[] r)

assert:
    forall(Recursive x, int[] y):
        if:
            x == y
        then:
            |y| == 0